--- a/app_portfolio/templates/home.html
+++ b/app_portfolio/templates/home.html
@@ -1,3 +1,7 @@
+{% extends 'layout.html' %}
+
+{% block content %}
+
 <h1>HOLA MUNDO</h1>
 
 {% comment %} RECORRER LA CONSULTA {% endcomment %}
@@ -13,3 +17,7 @@
 {% endif %}
 
 {% endfor%}
+
+{% endblock content %}
+
+
