--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -1,4 +1,14 @@
+{% extends "layout.html" %}
+
+{% block content %}
+
 <h1>detail</h1>
 
 <h1>{{blog.title}}</h1>
 <p>{{blog.description}}</p>
+
+{% endblock content %}
+
+
+
+
