--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -1,8 +1,18 @@
+{% extends 'layout.html' %}
+
+{% block content %}
+
 {% for blog in blogs %}
 
 <h1>{{blog.title}}</h1>
-<p>{{blog.description}}</p>
+<p>{{blog.description|truncatechars:50}}</p>
 <img src="{{blog.image.url}}" alt="{{blog.title}}">
-<h2>{{blog.date}}</h2>
+<h2>{{blog.date|date:'M d Y'|upper}}</h2>
+
+<a href="{% url 'blog:blog_detail' blog.id %}">{{blog.title}}</a>
 
 {% endfor %}
+
+{% endblock content %}
+
+
