--- a/app_portfolio/templates/home.html
+++ b/app_portfolio/templates/home.html
@@ -21,18 +21,34 @@
 
 {% comment %} RECORRER LA CONSULTA {% endcomment %}
 
-{% for project in projects%}
+<div class="row my-4 text-center">
 
-<h2>{{project.title}}</h2>
-<p>{{project.description}}</p>
-<img src="{{project.image.url}}" alt="" width="150" height="100">
+  <h3>My Projects</h3>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus, neque.</p>
 
-{% if project.url %}
-<a href="{{project.url}}">{{project.url}}</a>
-{% endif %}
 
-{% endfor%}
+  {% for project in projects%}
 
-{% endblock content %}
+  <div class="col-md-4 p-4">
+    <div class="card bg-black card-project">
+      <img src="{{project.image.url}}" alt="" width="150" height="100" class="card-img-top img-fluid" />
+      <div class="card-body text-light">
+
+        <h2>{{project.title}}</h2>
+        <p>{{project.description}}</p>
+
+        {% if project.url %}
+        <a href="{{project.url}}" class="btn btn-light rounded-0 btn-sm" target="_blank">{{project.url}}</a>
+        {% endif %}
+
+      </div>
+    </div>
+  </div>
+
+  {% endfor%}
+
+  {% endblock content %}
+  
+</div>
 
 
