--- a/app_portfolio/templates/home.html
+++ b/app_portfolio/templates/home.html
@@ -6,18 +6,21 @@
 {% load static %}
 
 <header class="row">
-  <div class="col-md-4">
-    <img class="profile" src="{% static 'files/perfil2.webp' %}" alt="profile">
+
+  <div class="col-md-4 d-flex align-items-center justify-content-center">
+    <img class="profile rounded-circle mb-4 border border-info border-3 shadow-lg" src="{% static 'files/perfil2.webp' %}" alt="profile">
   </div>
-  <div class="col-md-8 my-auto">
+  
+  <div class="col-md-8 m-auto">
     <h1>I am <strong>Jonathan Meza</strong></h1>
     <h3>Python FullStack Developer</h3>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni voluptates laudantium ipsam esse, id natus quos vero quas, magnam delectus tenetur dolor aliquid quod nemo, reiciendis ad. Distinctio ducimus iure dolore tempora laudantium quod reprehenderit ipsam aspernatur amet accusamus ea neque, praesentium corrupti laborum omnis quaerat rem sapiente architecto. Sapiente quae iste eveniet esse amet expedita, provident sunt odio illo accusantium sint. Placeat veritatis facilis assumenda exercitationem cumque quia rerum, temporibus quam dolore adipisci! Hic odit explicabo accusamus consequatur consectetur eos consequuntur dolore itaque esse aperiam quibusdam maiores voluptatum quaerat ipsa ad debitis illum, pariatur eveniet, alias incidunt non ratione?
     </p>
-    <a href="{% static 'files/resume.pdf'%}" class="btn btn-primary btn-lg rounded-0 my-3" target="_blank">Download CV</a>
+    {% comment %} <a href="{% static 'files/resume.pdf'%}" class="btn btn-primary btn-lg rounded-0 my-3" target="_blank">Download CV</a> {% endcomment %}
   </div>  
 </header>
+<hr class="my-4">
 
 {% comment %} RECORRER LA CONSULTA {% endcomment %}
 
