--- a/app_portfolio/templates/partials/navbar.html
+++ b/app_portfolio/templates/partials/navbar.html
@@ -7,11 +7,11 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto"> <!-- mover a la derecha -->        
+      <ul class="navbar-nav ms-auto d-flex align-items-center"> <!-- mover a la derecha -->        
         <li class="nav-item">
           <a class="nav-link" href="{% url 'blog:blog' %}">Blog</a>
         </li>
-        <li class="nav-item d-flex align-items-center">
+        <li class="nav-item">
           <a class="btn btn-primary btn-sm" href="{% static 'files/resume.pdf' %}" target="_blank">Download CV</a>
         </li>        
       </ul>
