--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -2,10 +2,16 @@
 
 {% block content %}
 
-<h1>detail</h1>
+<div class="text-center">
+  <h1 class="text-center">{{blog.title}} </h1>
 
-<h1>{{blog.title}}</h1>
-<p>{{blog.description}}</p>
+  <h2 class="my-2 h5">{{blog.date|date:'F jS Y'}}</h2>
+  <img src="{{blog.image.url}}" alt="{{blog.title}}" class="img-fluid"/>
+
+  <div class="my-4">
+    <p>{{blog.description|safe}}</p>
+  </div>
+</div>
 
 {% endblock content %}
 
