--- a/app_portfolio/templates/home.html
+++ b/app_portfolio/templates/home.html
@@ -1,21 +1,25 @@
 {% extends 'layout.html' %}
 
-
 {% block content %}
 
 {% load static %}
 
+{% load i18n %}
+
 <header class="row">
 
   <div class="col-md-4 d-flex align-items-center justify-content-center">
-    <img class="profile rounded-circle mb-4 border border-info border-3 shadow-lg" src="{% static 'files/perfil2.webp' %}" alt="profile">
+    <img class="profile rounded mb-4 border border-info border-3 shadow-lg" src="{% static 'files/perfil2.webp' %}" alt="profile">
   </div>
   
   <div class="col-md-8 m-auto">
-    <h1>I am <strong>Jonathan Meza</strong></h1>
+    <h1> {% trans "I am" %} <strong>Jonathan Meza</strong></h1>
     <h3>Python FullStack Developer</h3>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni voluptates laudantium ipsam esse, id natus quos vero quas, magnam delectus tenetur dolor aliquid quod nemo, reiciendis ad. Distinctio ducimus iure dolore tempora laudantium quod reprehenderit ipsam aspernatur amet accusamus ea neque, praesentium corrupti laborum omnis quaerat rem sapiente architecto. Sapiente quae iste eveniet esse amet expedita, provident sunt odio illo accusantium sint. Placeat veritatis facilis assumenda exercitationem cumque quia rerum, temporibus quam dolore adipisci! Hic odit explicabo accusamus consequatur consectetur eos consequuntur dolore itaque esse aperiam quibusdam maiores voluptatum quaerat ipsa ad debitis illum, pariatur eveniet, alias incidunt non ratione?
+      {% blocktrans trimmed %}
+      Full-stack developer specialized in Python with a strong background in software engineering and proven experience in the design, development and implementation of complete and efficient web applications. My versatile approach has allowed me to contribute to both client-side and server-side development, providing comprehensive and functional solutions.
+      {% endblocktrans %}
+      {% comment %} {% trans "I am a full-stack developer specialized in Python with a strong background in software engineering and proven experience in the design, development and implementation of complete and efficient web applications. My versatile approach has allowed me to contribute to both client-side and server-side development, providing comprehensive and functional solutions." %}  {% endcomment %}
     </p>
     {% comment %} <a href="{% static 'files/resume.pdf'%}" class="btn btn-primary btn-lg rounded-0 my-3" target="_blank">Download CV</a> {% endcomment %}
   </div>  
@@ -26,8 +30,12 @@
 
 <div class="row my-4 text-center">
 
-  <h3>My Projects</h3>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus, neque.</p>
+  <h3> {% trans "My Projects" %} </h3>
+  <p>
+    {% blocktrans trimmed %}
+    Each project is a journey where curiosity and creativity intertwine, guiding me through challenges towards ingenious solutions and exceptional digital experiences.
+    {% endblocktrans %}
+  </p>
 
 
   {% for project in projects%}
