--- a/app_portfolio/templates/layout.html
+++ b/app_portfolio/templates/layout.html
@@ -1,7 +1,8 @@
 {% load static %}
+{% load i18n %}
 
 <!DOCTYPE html>
-<html lang="es">
+<html lang={{ LANGUAGE_CODE }}>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +13,26 @@
   <title>Django Portfolio</title>
   
 </head>
-<body class="text-light">
+<body class="text-light">  
   
-  {% include 'partials/navbar.html' %}
+  {% include 'partials/navbar.html' %} 
+  
+  <div class="container text-center pt-5 mt-5">
+    <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+      <input name="next" type="hidden" value="{{ redirect_to }}">
+      <select name="language">
+          {% get_current_language as LANGUAGE_CODE %}
+          {% get_available_languages as LANGUAGES %}
+          {% get_language_info_list for LANGUAGES as languages %}
+          {% for language in languages %}
+              <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                  {{ language.name_local }} ({{ language.code }})
+              </option>
+          {% endfor %}
+      </select>
+      <input type="submit" value="Go" class="btn btn-primary">
+    </form>
+  </div>
 
   <div class="container p-4">
     {% block content %}
@@ -23,7 +41,7 @@
 
   
 
-  <footer>Footer</footer> 
+  {% comment %} <footer>Footer</footer>  {% endcomment %}
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
