--- a/app_portfolio/templates/home.html
+++ b/app_portfolio/templates/home.html
@@ -6,7 +6,7 @@
 
 {% load i18n %}
 
-<header class="row">
+<header class="row pt-5 mt-5">
 
   <div class="col-md-4 d-flex align-items-center justify-content-center">
     <img class="profile rounded mb-4 border border-info border-3 shadow-lg" src="{% static 'files/perfil2.webp' %}" alt="profile">
@@ -18,10 +18,8 @@
     <p>
       {% blocktrans trimmed %}
       Full-stack developer specialized in Python with a strong background in software engineering and proven experience in the design, development and implementation of complete and efficient web applications. My versatile approach has allowed me to contribute to both client-side and server-side development, providing comprehensive and functional solutions.
-      {% endblocktrans %}
-      {% comment %} {% trans "I am a full-stack developer specialized in Python with a strong background in software engineering and proven experience in the design, development and implementation of complete and efficient web applications. My versatile approach has allowed me to contribute to both client-side and server-side development, providing comprehensive and functional solutions." %}  {% endcomment %}
-    </p>
-    {% comment %} <a href="{% static 'files/resume.pdf'%}" class="btn btn-primary btn-lg rounded-0 my-3" target="_blank">Download CV</a> {% endcomment %}
+      {% endblocktrans %}      
+    </p>    
   </div>  
 </header>
 <hr class="my-4">
