[UPDATE] more styles in post_detail

--- a/app_blog/templates/post_detail.html
+++ b/app_blog/templates/post_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="text-center">
+<div class="text-center pt-5 mt-5">
   <h1 class="text-center">{{post.title}} </h1>
 
   <h2 class="my-2 h5">{{post.date|date:'F jS Y'}}</h2>
