[UPDATE] front posts

--- a/app_blog/templates/posts.html
+++ b/app_blog/templates/posts.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block content %}
-<h1 class="text-center pt-4"> {% trans "POSTS" %} </h1>
+<h1 class="text-center pt-4 mt-4"> {% trans "POSTS" %} </h1>
 
 {% for post in posts %}
 
