[UPDATE] hover for demo and github in the home

--- a/app_portfolio/templates/home.html
+++ b/app_portfolio/templates/home.html
@@ -45,10 +45,13 @@
 
         <h2>{{project.title}}</h2>
         <p>{{project.description}}</p>
-
-        {% if project.url %}
-        <a href="{{project.url}}" class="btn btn-light rounded-0 btn-sm" target="_blank">{{project.url}}</a>
-        {% endif %}
+        
+        <div class="container mt-4">
+          <div class="d-flex justify-content-between">
+            <a href="{{project.url}}" target="_blank" class="buttonHover rounded-0 btn-sm btn">GitHub</a>
+            <a href="{{project.demo}}" target="_blank" class="buttonHover rounded-0 btn-sm btn">Demo</a>
+          </div>
+        </div>       
 
       </div>
     </div>
