--- a/app_portfolio/templates/layout.html
+++ b/app_portfolio/templates/layout.html
@@ -6,11 +6,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   {% comment %} bootstrap {% endcomment %}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   {% comment %} static files {% endcomment %}
   <link rel="stylesheet" href=" {% static 'main.css' %}">
-  <title>Django Portfolio</title>
+  <title>Portfolio</title>
   
 </head>
 <body class="text-light">  
