--- a/app_blog/templates/posts.html
+++ b/app_blog/templates/posts.html
@@ -8,7 +8,7 @@
 {% for post in posts %}
 
 <div class="p-3">
-  <div class="card card-body bg-black">
+  <div class="card card-body bg-black card-project">
     <div class="row">
       <div class="col-3">
         <img src="{{post.image.url}}" alt="{{post.title}}" class="img-fluid"/>
