--- a/app_portfolio/templates/home.html
+++ b/app_portfolio/templates/home.html
@@ -14,7 +14,7 @@
   
   <div class="col-md-8 m-auto">
     <h1> {% trans "I am" %} <strong>Jonathan Meza</strong></h1>
-    <h3>Python FullStack Developer</h3>
+    <span><h3>Python FullStack Developer</h3></span>
     <p>
       {% blocktrans trimmed %}
       Full-stack developer specialized in Python with a strong background in software engineering and proven experience in the design, development and implementation of complete and efficient web applications. My versatile approach has allowed me to contribute to both client-side and server-side development, providing comprehensive and functional solutions.
