--- a/app_blog/templates/posts.html
+++ b/app_blog/templates/posts.html
@@ -3,20 +3,20 @@
 {% load i18n %}
 
 {% block content %}
-<h1 class="text-center pt-4 mt-4"> {% trans "POSTS" %} </h1>
+<h1 class="text-center title-posts"> {% trans "POSTS" %} </h1>
 
 {% for post in posts %}
 
-<div class="p-3">
+<div class="m-4">
   <div class="card card-body bg-black card-project">
     <div class="row">
       <div class="col-3">
-        <img src="{{post.image.url}}" alt="{{post.title}}" class="img-fluid"/>
+        <img src="{{post.image.url}}" alt="{{post.title}}" class="posts img-fluid"/>
       </div>
       <div class="col-9">
-        <h1>{{post.title}}</h1>
+        <h2>{{post.title}}</h2>
         <p>{{post.description|truncatechars:50}}</p>
-        <h2>{{post.date|date:'M d Y'|upper}}</h2>
+        <h5 style="font-style: italic;" >{{post.date|date:'M d Y'|upper}}</h5>
         <a href="{% url 'post:post_detail' post.id %}" class="buttonHover rounded-0 btn-sm btn"> {% trans "Read more" %} </a>        
       </div>
     </div>
