[UPDATE] modified translations in the home

--- a/app_portfolio/templates/home.html
+++ b/app_portfolio/templates/home.html
@@ -13,13 +13,13 @@
   </div>
   
   <div class="col-md-8 m-auto">
-    <h1> {% trans "I am" %} <strong>Jonathan Meza</strong></h1>
+    <h1><strong>Jonathan Meza</strong></h1>
     <div class="fullStack">
-      <h3>Python FullStack Developer.</h3>
+      <h3>Python Full Stack Developer.</h3>
     </div>
     <p>
       {% blocktrans trimmed %}
-      Full-stack developer specialized in Python with a strong background in software engineering and proven experience in the design, development and implementation of complete and efficient web applications. My versatile approach has allowed me to contribute to both client-side and server-side development, providing comprehensive and functional solutions.
+      Full stack developer specialized in Python with a solid background in software engineering and proven experience in the design, development and implementation of efficient web applications. I contribute in both front-end and back-end development thanks to my versatile approach, providing complete and functional solutions.
       {% endblocktrans %}      
     </p>    
     <a class="btn my-3 btn-lg buttonHover" href="{% static 'files/resume.pdf' %}" target="_blank"> {% trans "Download CV" %} </a>
@@ -34,7 +34,7 @@
   <h3> {% trans "My Projects" %} </h3>
   <p>
     {% blocktrans trimmed %}
-    Each project is a journey where curiosity and creativity intertwine, guiding me through challenges towards ingenious solutions and exceptional digital experiences.
+    Each project is a journey where curiosity and creativity intertwine.
     {% endblocktrans %}
   </p>
 
