--- a/app_portfolio/templates/home.html
+++ b/app_portfolio/templates/home.html
@@ -9,13 +9,13 @@
 <header class="row pt-5 mt-5">
 
   <div class="col-md-4 d-flex align-items-center justify-content-center">
-    <img class="profile rounded mb-4 border border-info border-3 shadow-lg" src="{% static 'files/perfil2.webp' %}" alt="profile">
+    <img class="profile rounded my-5" src="{% static 'files/perfil2.webp' %}" alt="profile">
   </div>
   
   <div class="col-md-8 m-auto">
     <h1><strong>Jonathan Meza</strong></h1>
     <div class="fullStack">
-      <h3>Python Full Stack Developer.</h3>
+      <h3 class="fullStack-color">Python Full Stack Developer.</h3>
     </div>
     <p>
       {% blocktrans trimmed %}
