--- a/app_portfolio/templates/home.html
+++ b/app_portfolio/templates/home.html
@@ -1,69 +1,97 @@
-{% extends 'layout.html' %}
+{% extends 'layout.html' %} 
 
-{% block content %}
+{% block content %} 
 
-{% load static %}
+{% load static %} 
 
 {% load i18n %}
 
-<header class="row pt-5 mt-5">
-
-  <div class="col-md-4 d-flex align-items-center justify-content-center">
-    <img class="profile rounded my-5" src="{% static 'files/perfil2.webp' %}" alt="profile">
-  </div>
-  
-  <div class="col-md-8 m-auto">
-    <h1><strong>Jonathan Meza</strong></h1>
-    <div class="fullStack">
-      <h3 class="fullStack-color">Python Full Stack Developer.</h3>
+<section class="pt-5">
+  <header class="row">
+    <div class="col-md-4 d-flex align-items-center justify-content-center">
+      <!-- mover a la derecha -->
+      <img
+        class="profile rounded my-5"
+        src="{% static 'files/perfil2.webp' %}"
+        alt="profile"
+      />
     </div>
-    <p>
-      {% blocktrans trimmed %}
-      Full stack developer specialized in Python with a solid background in software engineering and proven experience in the design, development and implementation of efficient web applications. I contribute in both front-end and back-end development thanks to my versatile approach, providing complete and functional solutions.
-      {% endblocktrans %}      
-    </p>    
-    <a class="btn my-3 btn-lg buttonHover" href="{% static 'files/resume.pdf' %}" target="_blank"> {% trans "Download CV" %} </a>
-  </div>  
-</header>
-<hr class="my-4">
+
+    <div class="col-md-8 m-auto">
+      <h1><strong>Jonathan Meza</strong></h1>
+      <div class="fullStack">
+        <h3 class="fullStack-color">Python Full Stack Developer.</h3>
+      </div>
+
+      <p>
+        {% blocktrans trimmed %} Full stack developer specialized in Python with
+        a solid background in software engineering and proven experience in the
+        design, development and implementation of efficient web applications. I
+        contribute in both front-end and back-end development thanks to my
+        versatile approach, providing complete and functional solutions. 
+        {% endblocktrans %}
+      </p>
+      <a
+        class="btn my-3 btn-lg buttonHover"
+        href="{% static 'files/resume.pdf' %}"
+        target="_blank"
+      >
+        {% trans "Download CV" %}
+      </a>
+    </div>
+  </header>
+</section>
+
+<hr />
 
 {% comment %} RECORRER LA CONSULTA {% endcomment %}
 
-<div class="row mt-4 text-center">
+<section id="projects" class="pt-5">
+  <div class="row text-center">
+    <h3>{% trans "My Projects" %}</h3>
+    <p>
+      {% blocktrans trimmed %} Each project is a journey where curiosity and
+      creativity intertwine. {% endblocktrans %}
+    </p>
 
-  <h3> {% trans "My Projects" %} </h3>
-  <p>
-    {% blocktrans trimmed %}
-    Each project is a journey where curiosity and creativity intertwine.
-    {% endblocktrans %}
-  </p>
+    {% for project in projects%}
 
+    <div class="col-md-4 p-5">
+      <div class="card bg-black card-project">
+        <img
+          src="{{project.image.url}}"
+          alt=""
+          width="150"
+          height="100"
+          class="card-img-top img-fluid"
+        />
+        <div class="card-body text-light">
+          <h2>{{project.title}}</h2>
+          <p>{{project.description}}</p>
 
-  {% for project in projects%}
-
-  <div class="col-md-4 p-4">
-    <div class="card bg-black card-project">
-      <img src="{{project.image.url}}" alt="" width="150" height="100" class="card-img-top img-fluid" />
-      <div class="card-body text-light">
-
-        <h2>{{project.title}}</h2>
-        <p>{{project.description}}</p>
-        
-        <div class="container mt-4">
-          <div class="d-flex justify-content-between">
-            <a href="{{project.url}}" target="_blank" class="buttonHover rounded-0 btn-sm btn">GitHub</a>
-            <a href="{{project.demo}}" target="_blank" class="buttonHover rounded-0 btn-sm btn">Demo</a>
+          <div class="container mt-4">
+            <div class="d-flex justify-content-between git-demo">
+              <a
+                href="{{project.url}}"
+                target="_blank"
+                class="buttonHover rounded-0 btn-sm btn"
+                >GitHub</a
+              >
+              <a
+                href="{{project.demo}}"
+                target="_blank"
+                class="buttonHover rounded-0 btn-sm btn"
+                >Demo</a
+              >
+            </div>
           </div>
-        </div>       
-
+        </div>
       </div>
     </div>
+
+    {% endfor%}
+
   </div>
+</section>
 
-  {% endfor%}
-
-  {% endblock content %}
-  
-</div>
-
-
+{% endblock content %}
