--- a/app_portfolio/templates/layout.html
+++ b/app_portfolio/templates/layout.html
@@ -1,32 +1,36 @@
-{% load static %}
+{% load static %} 
+
 {% load i18n %}
 
 <!DOCTYPE html>
-<html lang={{ LANGUAGE_CODE }}>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="{{ LANGUAGE_CODE }}">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href=" {% static 'main.css' %}" />
+    <title>Portfolio</title>
+  </head>
 
-  {% comment %} bootstrap {% endcomment %}
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  {% comment %} static files {% endcomment %}
-  <link rel="stylesheet" href=" {% static 'main.css' %}">
-  <title>Portfolio</title>
-  
-</head>
-<body class="text-light">  
-  
-  {% include 'partials/navbar.html' %}  
+  <body class="text-light" id="home">
 
-  <div class="container p-4">
-    {% block content %}
-    {% endblock content %}
-  </div>
+    {% include 'partials/navbar.html' %}
 
-  
+    <div class="container p-3">
+      {% block content %} 
+      {% endblock content %}
+    </div>
 
-  {% comment %} <footer>Footer</footer>  {% endcomment %}
-  
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    
+  </body>
 </html>
