--- a/app_portfolio/templates/partials/navbar.html
+++ b/app_portfolio/templates/partials/navbar.html
@@ -17,7 +17,7 @@
 
         <li class="nav-item">
           <a href="{% url 'home' %}" class="nav-link">
-            <h5 class="mb-1">Home</h5>           
+            <h5 class="mb-1">{% trans "Home" %}</h5>           
           </a>
         </li>
         
@@ -26,7 +26,7 @@
 
           <li class="nav-item">
             <a href="#projects" class="nav-link">
-              <h5 class="mb-1">Projects</h5>           
+              <h5 class="mb-1">{% trans "Projects" %}</h5>           
             </a>
           </li>
         {% endif %}
@@ -56,7 +56,7 @@
       </ul>      
       <ul class="navbar-nav ms-auto d-flex align-items-center">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'post:post' %}?blog_clicked=true"><h5 class="mb-1">Blog</h5></a>
+          <a class="nav-link" href="{% url 'post:post' %}?blog_clicked=true"><h5 class="mb-1">{% trans "Blog" %}</h5></a>
         </li>      
         
         <li class="nav-item">
